fix profile picture cropper issues

--- a/src/app/features/profile/components/update-profile/update-profile.component.scss
+++ b/src/app/features/profile/components/update-profile/update-profile.component.scss
@@ -5,13 +5,6 @@ mat-form-field {
   margin-bottom: .8rem;
 }
 
-@media only screen and (max-width: 600px) {
-  mat-form-field {
-    max-width: initial;
-    width: 100%;
-  }
-}
-
 form {
   display: flex;
   flex-direction: row;
@@ -21,6 +14,10 @@ form {
     width: 100%;
     max-width: 480px;
   }
+
+  .column-fill {
+    width: 100%;
+  }
 }
 
 .profile-picture {
@@ -29,13 +26,39 @@ form {
 }
 
 .profile-image {
-  margin-top: 1.4rem;
-  margin-left: 1.4rem;
-  display: grid;
-  place-content: center;
-  justify-content: stretch;
+  display: flex;
+  flex-direction: column;
+  height: 260px;
+  width: 260px;
+  align-items: center;
+  margin: 1.4rem auto;
+
+  img {
+    height: 260px;
+    width: 260px;
+  }
 }
 
 .profile-picture-btn {
   margin: 1.4rem auto;
+}
+
+@media only screen and (max-width: 600px) {
+  mat-form-field {
+    max-width: initial;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1036px) {
+  form {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+  }
+
+  .column-fill {
+    max-width: 480px;
+    margin-bottom: 4rem;
+  }
 }
